--- a/ux-portfolio-studio/package.json
+++ b/ux-portfolio-studio/package.json
@@ -15,10 +15,11 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.78.1",
+    "@sanity/structure": "^2.36.2",
+    "@sanity/vision": "^3.83.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.78.1",
+    "sanity": "^3.83.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
